--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>score-fleur</groupId>
-    <artifactId>scorefleur</artifactId>
+    <artifactId>moviefleur</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
