--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.media</groupId>
+            <artifactId>jmf</artifactId>
+            <version>2.1.1e</version>
+        </dependency>
     </dependencies>
 
 </project>
